# lance-graph

./: .bumpversion.toml  AGENTS.md  Cargo.toml  PR_DESCRIPTION.md  README.md  SPARE_PARTS_SUMMARY.md
.claude/: BF16_SEMIRING_EPIPHANIES.md  FALKORDB_ANALYSIS.md  FIX_BLASGRAPH_SPO.md  LANGGRAPH_CRATE_STRUCTURE.md  LANGGRAPH_FULL_INVENTORY.md  LANGGRAPH_OUR_ADDITIONS.md  LANGGRAPH_PARITY_CHECKLIST.md  LANGGRAPH_TRANSCODING_MAP.md  OVERLOOKED_THREADS.md  UNIFIED_HDR_RENAME_AND_CROSSPOLINATE.md  VISION_ORCHESTRATED_THINKING.md
.claude/board/: ARCHITECTURE_ENTROPY_LEDGER.md  CROSS_REPO_PRS.md  IDEAS.md  INTEGRATION_PLANS.md  LATEST_STATE.md  MEDCARE_POLICY_GAP.md  PR_ARC_INVENTORY.md  SINGLE_BINARY_TOPOLOGY.md  STATUS_BOARD.md  TECH_DEBT.md
.claude/board/sprint-log/: SPRINT_LOG.md  meta-1-review.md  meta-2-review.md  meta-3-review.md  sprint-summary.md
.claude/knowledge/: cam-codebook-resonance-projection.md  entropy-budget-codebook-superposition.md  gaussian-splat-cam-plane-workaround.md  holographic-temporal-access-projection.md  markov-triplet-query-quorum.md  mathematical-folding-confidence.md  nars-to-bitmap-nxor-transcode.md  planar-bundling-similarity-distance.md  semantic-cam-distance.md  soa-dto-fma-map.md
.claude/plans/: 2026-05-06-splat-osint-ingestion-v1.md  grammar-foundry-followup-v1.md  jc-pillars-runtime-wiring-v1-ERRATUM.md  jc-pillars-runtime-wiring-v1.md  lance-graph-rdf-fma-snomed-v1.md  oxigraph-arigraph-cognitive-shader-soa-merge-v1.md  tetrahedral-epiphany-splat-integration-v1.md  thought-cycle-soa-awareness-integration-v1.md
.github/workflows/: build.yml  python-publish.yml  python-test.yml  release.yml  rust-publish.yml  rust-test.yml  style.yml
AdaWorldAPI-lance-graph-d9df43b/: .bumpversion.toml
AdaWorldAPI-lance-graph-d9df43b/.claude/: BELICHTUNGSMESSER.md  DEEP_ADJACENT_EXPLORATION.md  FINAL_STACK.md  GPU_CPU_SPLIT_ARCHITECTURE.md  INTEGRATION_SESSIONS.md  INVENTORY_MAP.md  RESEARCH_REFERENCE.md  RESEARCH_THREADS.md  SESSION_B_HDR_RENAME.md  SESSION_D_LENS_CORRECTION.md  SESSION_FALKORDB_CROSSCHECK.md  SESSION_J_PACKED_DATABASE.md  SESSION_LANCE_ECOSYSTEM_INVENTORY.md  SESSION_LANGGRAPH_ORCHESTRATION.md
AdaWorldAPI-lance-graph-d9df43b/.github/workflows/: python-publish.yml  release.yml  style.yml
AdaWorldAPI-lance-graph-d9df43b/ci/: bump_version.py  calculate_version.py
AdaWorldAPI-lance-graph-d9df43b/crates/lance-graph/: Cargo.toml  README.md
AdaWorldAPI-lance-graph-d9df43b/crates/lance-graph-benches/: Cargo.toml  README.md
AdaWorldAPI-lance-graph-d9df43b/crates/lance-graph-catalog/: Cargo.toml
AdaWorldAPI-lance-graph-d9df43b/docs/: project_structure.md
AdaWorldAPI-lance-graph-d9df43b/examples/: README.md  kg_traversal.py
AdaWorldAPI-lance-graph-d9df43b/python/: DEVELOPMENT.md  Makefile  pyproject.toml
crates/cognitive-shader-driver/src/: lib.rs
crates/jc/: Cargo.toml
crates/jc/examples/: osint_edge_traversal.rs
crates/lance-graph/: Cargo.toml  README.md
crates/lance-graph-benches/benches/: graph_execution.rs
crates/lance-graph-callcenter/src/: lance_membrane.rs  version_watcher.rs
crates/lance-graph-catalog/: Cargo.toml  README.md
crates/lance-graph-catalog/src/: catalog_provider.rs  connector.rs  lib.rs  table_reader.rs  type_mapping.rs  unity_catalog.rs
crates/lance-graph-catalog/tests/: unity_catalog_integration.rs
crates/lance-graph-cli/: Cargo.toml  README.md
crates/lance-graph-cli/src/: catalog_helpers.rs  config.rs  main.rs  namespace_helpers.rs  output.rs
crates/lance-graph-cli/src/commands/: cypher.rs  init.rs  mod.rs  schema.rs  sql.rs  tables.rs
crates/lance-graph-contract/src/: cycle_accumulator.rs  lib.rs  splat.rs
crates/lance-graph-planner/src/: lib.rs
crates/lance-graph-python/: Cargo.toml
crates/lance-graph-python/src/: catalog.rs  graph.rs  lib.rs  namespace.rs
crates/lance-graph/benches/: graph_execution.rs
crates/lance-graph/src/: ast.rs  config.rs  csr_index.rs  error.rs  lance_vector_search.rs  lib.rs  logical_plan.rs  parameter_substitution.rs  parser.rs  query.rs  semantic.rs  source_catalog.rs  spark_dialect.rs  sql_catalog.rs  sql_query.rs  table_readers.rs
crates/lance-graph/src/datafusion_planner/: expression.rs  join_ops.rs  mod.rs  scan_ops.rs  test_fixtures.rs  udf.rs  vector_ops.rs
crates/lance-graph/src/datafusion_planner/builder/: basic_ops.rs
crates/lance-graph/src/graph/: fingerprint.rs  mod.rs
crates/lance-graph/src/graph/blasgraph/: belichtungsmesser.rs  cascade_ops.rs  clam_neighborhood.rs  columnar.rs  descriptor.rs  heel_hip_twig_leaf.rs  lance_neighborhood.rs  light_meter.rs  mod.rs  ndarray_bridge.rs  neighborhood.rs  neighborhood_csr.rs  ops.rs  semiring.rs  sparse.rs  types.rs  vector.rs  zeckf64.rs
crates/lance-graph/src/graph/spo/: merkle.rs  mod.rs  store.rs
crates/lance-graph/src/lance_native_planner/: csr_expand.rs  direction.rs  extension_planner.rs  mod.rs  take.rs
crates/lance-graph/src/namespace/: directory.rs
crates/lance-graph/src/simple_executor/: aliases.rs  expr.rs
crates/lance-graph/tests/: hdr_proof.rs  spo_ground_truth.rs  test_case_insensitivity.rs  test_complex_return_clauses.rs  test_datafusion_pipeline.rs  test_lance_native_expand.rs  test_to_spark_sql.rs  test_to_sql.rs  test_var_reuse_match.rs
docs/: project_structure.md
docs/superpowers/plans/: 2026-06-22-csr-native-expand-operator.md
examples/: basic_cypher.py
python/: Cargo.toml  Makefile  README.md  pyproject.toml
python/examples/test_kg/Entity.lance/_transactions/: 0-29f37b7a-d702-433e-af49-158292791d4e.txn
python/python/knowledge_graph/: __init__.py  component.py  config.py  service.py  store.py
python/python/knowledge_graph/llm/: qa.py
python/python/lance_graph/: __init__.py
python/python/tests/: test_concurrency.py  test_gcs_integration.py  test_gil_release.py  test_graph.py  test_knowledge_graph_config.py  test_namespace.py  test_scalar_functions.py  test_sql.py  test_store.py  test_to_sql.py  test_unity_catalog.py  test_vector_search.py
python/src/: graph.rs  namespace.rs
rust/lance-graph/: Cargo.toml
(+56 files in other folders)
