[package]
name = "lance-graph-python"
version = "0.4.0"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
publish = false

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "56.2", features = ["pyarrow"] }
arrow-array = "56.2"
arrow-schema = "56.2"
arrow-ipc = "56.2"
futures = "0.3"
lance-graph = { path = "../rust/lance-graph" }
lance-namespace = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39", "py-clone"] }
snafu = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
