[package]
name = "jc"
version = "0.1.0"
edition = "2021"
description = "Jirak-Cartan: five-pillar proof-in-code for binary-Hamming causal field computation"
license = "Apache-2.0"

# Zero deps — standalone, like deepnsm and bgz17.
# The proof is the proof regardless of SIMD path.
# ndarray can be added later for acceleration; the core math is pure Rust.

[[example]]
name = "prove_it"

[[example]]
name = "sigma_probe"

[[example]]
name = "probe_p1"

[[example]]
name = "osint_edge_traversal"
