[package]
name = "lance-graph-cli"
version = "0.5.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Lance Devs <dev@lancedb.com>"]
repository = "https://github.com/lancedb/lance-graph"
description = "CLI tool for translating Cypher queries to SQL"
keywords = ["lance", "graph", "cypher", "sql", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "lgraph"
path = "src/main.rs"

[dependencies]
arrow-array = "56.2"
arrow-schema = "56.2"
clap = { version = "4", features = ["derive"] }
lance-graph = { path = "../lance-graph", version = "0.5.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
