[package]
name = "lance-graph"
version = "0.5.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Lance Devs <dev@lancedb.com>"]
repository = "https://github.com/lancedb/lance-graph"
readme = "README.md"
description = "Graph query engine for Lance datasets with Cypher support"
keywords = ["lance", "graph", "cypher", "query", "datafusion"]
categories = ["database", "data-structures", "science"]

[dependencies]
arrow = { version = "57", features = ["prettyprint"] }
arrow-array = "57"
arrow-schema = "57"
datafusion = { version = "51", default-features = false, features = [
    "nested_expressions",
    "regex_expressions",
    "unicode_expressions",
    "crypto_expressions",
    "encoding_expressions",
    "datetime_expressions",
    "string_expressions",
] }
datafusion-common = "51"
datafusion-expr = "51"
datafusion-sql = "51"
datafusion-functions-aggregate = "51"
futures = "0.3"
lance-graph-catalog = { path = "../lance-graph-catalog", version = "0.5.3" }
lance = "2"
lance-linalg = "2"
lance-namespace = "2"
nom = "7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio", "html_reports"] }
futures = "0.3"
lance-arrow = "2"
lance-index = "2"
tempfile = "3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "graph_execution"
harness = false
